testing/framework/resources/Advanced/Failing/mondrian/query809.e
USA	CA	Altadena	23598
USA	CA	Altadena	23688
USA	CA	Arcadia	23598
USA	CA	Arcadia	23688
USA	CA	Bellflower	23598
USA	CA	Bellflower	23688
USA	CA	Berkeley	22478
USA	CA	Beverly Hills	23598
USA	CA	Beverly Hills	23688
USA	CA	Burbank	23598
USA	CA	Burbank	23688
USA	CA	Burlingame	22478
USA	CA	Chula Vista	\N
USA	CA	Colma	22478
USA	CA	Concord	22478
USA	CA	Coronado	\N
USA	CA	Daly City	22478
USA	CA	Downey	23598
USA	CA	Downey	23688
USA	CA	El Cajon	\N
USA	CA	Fremont	22478
USA	CA	Glendale	23598
USA	CA	Glendale	23688
USA	CA	Grossmont	\N
USA	CA	Imperial Beach	\N
USA	CA	La Jolla	\N
USA	CA	Lakewood	23598
USA	CA	Lakewood	23688
USA	CA	La Mesa	\N
USA	CA	Lemon Grove	\N
USA	CA	Lincoln Acres	\N
USA	CA	Long Beach	23598
USA	CA	Long Beach	23688
USA	CA	Los Angeles	23598
USA	CA	Los Angeles	23688
USA	CA	Mill Valley	22478
USA	CA	National City	\N
USA	CA	Newport Beach	23598
USA	CA	Newport Beach	23688
USA	CA	Novato	22478
USA	CA	Oakland	22478
USA	CA	Palo Alto	22478
USA	CA	Pomona	23598
USA	CA	Pomona	23688
USA	CA	Redwood City	22478
USA	CA	Richmond	22478
USA	CA	San Carlos	22478
USA	CA	San Diego	\N
USA	CA	San Francisco	22478
USA	CA	San Gabriel	23598
USA	CA	San Gabriel	23688
USA	CA	San Jose	22478
USA	CA	Santa Cruz	22478
USA	CA	Santa Monica	23598
USA	CA	Santa Monica	23688
USA	CA	Spring Valley	\N
USA	CA	Torrance	23598
USA	CA	Torrance	23688
USA	CA	West Covina	23598
USA	CA	West Covina	23688
USA	CA	Woodland Hills	23598
USA	CA	Woodland Hills	23688
USA	OR	Albany	27694
USA	OR	Beaverton	20319
USA	OR	Corvallis	27694
USA	OR	Lake Oswego	20319
USA	OR	Lebanon	27694
USA	OR	Milwaukie	20319
USA	OR	Oregon City	20319
USA	OR	Portland	20319
USA	OR	Salem	27694
USA	OR	W. Linn	20319
USA	OR	Woodburn	27694
USA	WA	Anacortes	28206
USA	WA	Ballard	21215
USA	WA	Bellingham	28206
USA	WA	Bremerton	39696
USA	WA	Burien	21215
USA	WA	Edmonds	21215
USA	WA	Everett	21215
USA	WA	Issaquah	21215
USA	WA	Kirkland	21215
USA	WA	Lynnwood	21215
USA	WA	Marysville	21215
USA	WA	Olympia	33858
USA	WA	Port Orchard	39696
USA	WA	Puyallup	33858
USA	WA	Redmond	21215
USA	WA	Renton	21215
USA	WA	Seattle	21215
USA	WA	Sedro Woolley	28206
USA	WA	Spokane	30268
USA	WA	Tacoma	33858
USA	WA	Walla Walla	\N
USA	WA	Yakima	\N
